# auth-service

./: pyproject.toml
app/common_lib/: errors.py  executor.py
app/common_lib/domain/: model.py
app/domain/models/: session.py  tokens.py  user.py  verification_code.py
app/domain/repos/: session.py  user.py  verification_code.py
app/domain/services/: session.py  user.py
tests/unit/: conftest.py
tests/unit/services/: session_service_test.py  user_service_test.py
